--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "application-name",
-  "version": "0.0.1",
-  "private": true,
-  "dependencies": {
-    "body-parser": "^1.0.2",
-    "errorhandler": "~1.4.3",
-    "express": "~4.1.1",
-    "jade": "~0.31.2",
-    "method-override": "^1.0.0",
-    "morgan": "^1.0.0",
-    "socketio": "^1.0.0"
-  }
+    "name": "application-name",
+    "version": "0.0.1",
+    "private": true,
+    "dependencies": {
+      "body-parser": "^1.0.2",
+      "errorhandler": "~1.4.3",
+      "express": "~4.1.1",
+      "jade": "~0.31.2",
+      "method-override": "^1.0.0",
+      "morgan": "^1.0.0",
+      "socketio": "^1.0.0"
+  },
+    "scripts": {
+	"server" : "node app.js",
+	"listen" : "node client.js"
+    }
 }
