--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "angular-ui-router": "^0.3.1",
     "body-parser": "^1.0.2",
+    "errorhandler": "~1.4.3",
     "express": "~4.1.1",
     "jade": "~0.31.2",
     "method-override": "^1.0.0",
-    "morgan": "^1.0.0",
-    "errorhandler": "~1.4.3"
+    "morgan": "^1.0.0"
   }
 }
